# pyhtonmig

./: BRANCHNEWS  BRANCH_NOTES  BRANCH_PLANS  BROKEN  BaseHTTPServer.py  FileJenkins  GRIN.txt  INTBENCH  JIT_TODO.txt  LICENSE  Makefile  Makefile.in  Makefile.pre.in  NEWS  NOTES.txt  PEP.txt  PLAN.txt  README  RELNOTES  SocketServer.py  TODO  TODO-3151.txt  asyncore.py  build_secure_py.sh  configure  configure.in  fakesocket.py  gopherlib.py  httplib.py  ihooks.py  imaplib.py  interpretermodule.c  mhlib.py  new_soc_logging_test.py  nntplib.py  pep_update.txt  pipes.py  pkgutil.py  pyconfig.h.in  robotparser.py  (+27 more)
Doc/: Makefile  Makefile.deps  README  TODO  ext.tex  glossary.rst  lib.tex  license.rst  ref.tex  ref2.tex  ref3.tex  ref4.tex  ref7.tex  tut.tex
Doc/api/: api.tex  concrete.tex  exceptions.tex  utilities.tex
Doc/c-api/: concrete.rst  exceptions.rst  intro.rst  memory.rst  newtypes.rst  object.rst  typeobj.rst  unicode.rst  veryhigh.rst
Doc/doc/: doc.tex
Doc/ext/: ext.tex  extending.tex
Doc/extending/: embedding.rst  newtypes.rst
Doc/faq/: extending.rst
Doc/howto/: functional.rst
Doc/html/: Makefile  index.html.in  style.css
Doc/includes/: noddy.c  noddy2.c  noddy3.c  noddy4.c  typestruct.h
Doc/inst/: inst.tex
Doc/lib/: lib.tex  libcalendar.tex  libcompileall.tex  libcrypt.tex  libcsv.tex  libdis.tex  libexcs.tex  libfnmatch.tex  libfuncs.tex  libgetopt.tex  libgettext.tex  libimaplib.tex  libmimetools.tex  libnetrc.tex  libobjs.tex  liboptparse.tex  libos.tex  libparser.tex  libpoplib.tex  libposixpath.tex  librandom.tex  librfc822.tex  libsched.tex  libsmtplib.tex  libsocket.tex  libstdtypes.tex  libstruct.tex  libsys.tex  libtelnetlib.tex  libtime.tex  libundoc.tex  liburllib.tex  libwhrandom.tex  libxmllib.tex
Doc/paper-letter/: Makefile
Doc/perl/: l2hinit.perl  ltxmarkup.perl  python.perl
Doc/ref/: ref.tex  ref2.tex  ref3.tex  ref4.tex  ref5.tex  ref7.tex
Doc/tools/: mkhowto  (+4 more)
Grammar/: Grammar
Include/: Python-ast.h  Python.h  abstract.h  allobjects.h  asdl.h  ast.h  bg_thread.h  boolobject.h  bufferobject.h  bytearrayobject.h  bytes_methods.h  bytesobject.h  cStringIO.h  ceval.h  cgensupport.h  code.h  codecs.h  compile.h  complexobject.h  datetime.h  descrobject.h  dictobject.h  dtoa.h  errcode.h  errors.h  eval.h  fileobject.h  floatobject.h  frameobject.h  funcobject.h  grammar.h  import.h  interpreter.h  intobject.h  intrcheck.h  listobject.h  longintrepr.h  longobject.h  memoryobject.h  modsupport.h  (+33 more)
JIT/: jit_notes.txt
Lib/: SimpleHTTPServer.py  SocketServer.py  StringIO.py  UserString.py  __future__.py  __optimizer__.py  _importlib.py  _pyio.py  _strptime.py  abc.py  aifc.py  ast.py  base64.py  bdb.py  cgi.py  codecs.py  codeop.py  collections.py  contextlib.py  controlled_importlib.py  copy.py  csv.py  decimal.py  dis.py  doctest.py  dumbdbm.py  ftplib.py  getopt.py  gettext.py  heapq.py  hotbuf.py  httplib.py  importlib.py  imputil.py  inspect.py  io.py  locale.py  mailbox.py  mhlib.py  modulefinder.py  (+39 more)
Lib/test/mpdecimal/: LIBTEST.txt  Makefile.in  Makefile.vc  config.h.in  configure  configure.in
Lib/test/mpdecimal/python/: ctx-deccheck.py  deccheck.py  formathelper.py  randdec.py
Lib/test/mpdecimal/tests/: cov.c  fntcov.c  fullcov_header.patch  gettests.sh  karatsuba_fnt.c  karatsuba_fnt2.c  malloc_fail.c  mpd_mpz_add.c  mpd_mpz_divmod.c  mpd_mpz_mul.c  mpd_mpz_sub.c  ppro_mulmod.c  runallconfigs.bat  runallconfigs.sh  runalltests.bat  runtest.c  test_transpose.c
Lib/test/mpdecimal/tests/testdata_dist/: cov.decTest  extra.decTest
Mac/: ReadMe  Relnotes  _checkversion.py
Misc/: ACKS  HISTORY  NEWS  cheatsheet  maintainers.rst  python-config.in
Modules/: Makefile.pre.in  Setup.dist  Setup.guido  Setup.in  Setup.irix4  Setup.irix5  Setup.minix  Setup.solaris2  Setup.sunos4  _bsddb.c  _bufferedio.c  _bytes_iomodule.c  _bytesio.c  _bytesiomodule.c  _codecsmodule.c  _collectionsmodule.c  _csv.c  _cursesmodule.c  _dbmmodule.c  _elementtree.c  _fileio.c  _hotbuf.c  _hotshot.c  _iobase.c  _iomodule.h  _json.c  _localemodule.c  _lsprof.c  _pickle.c  _picklemodule.c  _posixsubprocess.c  _sre.c  _ssl.c  _string_iomodule.c  _stringio.c  _stringiomodule.c  _struct.c  _testcapimodule.c  _textio.c  _threadmodule.c  (+66 more)
Objects/: Makefile.in  abstract.c  accessobject.c  boolobject.c  bufferobject.c  bytearrayobject.c  bytesobject.c  cellobject.c  classobject.c  codeobject.c  complexobject.c  descrobject.c  dictobject.c  enumobject.c  exceptions.c  fileobject.c  floatobject.c  frameobject.c  funcobject.c  intobject.c  iterobject.c  listobject.c  longobject.c  mappingobject.c  memoryobject.c  methodobject.c  moduleobject.c  object.c  obmalloc.c  rangeobject.c  setobject.c  sliceobject.c  stringobject.c  structseq.c  trackedmalloc.c  tupleobject.c  typeobject.c  typeslots.inc  unicodeobject.c  weakrefobject.c  (+1 more)
PC/: _msi.c  _winreg.c  config.c  getpathp.c  import_nt.c  msvcrtmodule.c  pyconfig.h  python3.def  python3dll.c  winreg.c
PCbuild/: _ctypes.vcproj  build_ssl.py  cdecimal.vcproj  pcbuild.sln  python16.dsp  python16.wse  python20.wse  python3dll.vcproj  pythoncore.dsp  pythoncore.vcproj  readme.txt
Parser/: Makefile.in  Python.asdl  acceler.c  asdl.py  asdl_c.py  bitset.c  firstsets.c  grammar.c  intrcheck.c  myreadline.c  node.c  parser.c  parser.h  parsetok.c  pgen.c  pgen.h  pgenmain.c  spark.py  tokenizer.c  tokenizer.h
Python/: Makefile.in  Python-ast.c  _warnings.c  asdl.c  ast.c  bg_thread.cc  bltinmodule.c  ceval.c  ceval_gil.h  codecs.c  compile.c  compile.txt  dtoa.c  dynload_win.c  errors.c  exceptions.c  frozen.c  frozenmain.c  future.c  getargs.c  getcopyright.c  getcwd.c  getmtime.c  graminit.c  import.c  importdl.c  importdl.h  mactoolboxglue.c  marshal.c  modsupport.c  mystrtoul.c  newcompile.c  opcode_targets.h  optimize.c  peephole.c  pyarena.c  pymath.c  pystate.c  pystrtod.c  pythonmain.c  (+8 more)
Unittests/: BgThreadTest.cc  DatetimeTest.cc  DictTest.cc  GetArgsTest.cc  ListTest.cc  ObjectTest.cc  README.txt  ThreadTest.cc  UnicodeTest.cc  pytest.h  pytest_main.cc
Util/: PySmallPtrSet.h
tests/: README
(+689 files in other folders)
